# starship-jj

./: .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  schema.json  starship-jj.toml
src/: config.rs  main.rs
src/config/: bookmarks.rs  commit.rs  metrics.rs  state.rs  symbol.rs  util.rs
