[package]
name = "starship-jj"
version = "0.5.1"
description = "starship plugin for jj"
resolver = "3"
edition = "2024"
authors = ["Lilly Mannhal <lilly.mannhal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/lanastara_foss/starship-jj"
repository = "https://gitlab.com/lanastara_foss/starship-jj"
keywords = [
  "command-line-tool",
  "jj",
  "jujutsu",
  "prompt",
  "starship",
]
categories = ["command-line-utilities"]

[lints]

[features]
default = []
json-schema = ["dep:schemars", "dep:serde_json"]

[dependencies]
unicode-width = "0.2.0"
jj-lib = "0.32.0"
jj-cli = "0.32.0"
clap = "4.5.31"
colored = "3.0"
etcetera = "0.10.0"
glob = "0.3"
dotenvy = "0.15"
config = "0.15"
toml = "0.9"
pollster = "0.4.0"
schemars = { version = "1.0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tinytemplate = "1.2.1"
const_format="0.2.34"

[build-dependencies]
built={version="0.8", features=["git2"]}
